Create welcome controller, view & routes

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,121 @@
-<h1>Hello this works</h1>
+<header id="main_header" class="cf">
+
+   	<div class="wrapper_wide">
+
+			<a href="index.html" id="logo">Jamaluna</a>
+  		<nav>
+  			<ul>
+  			    <li><a href="vlogs.html">Channel</a></li>
+  				<li><a href="#">Facebook</a></li>
+  				<li><a href="#">Instagram</a></li>
+
+         <li><a href="#">Login</a></li>
+
+
+  				<li><a href="#">Help</a></li>
+  			</ul>
+  		</nav>
+
+
+  		</div>
+
+
+
+
+
+
+
+
+
+  	</header>
+
+  	<div id="banner" class="podcasts_banner">
+
+  	 <h1>Discover - Learn - Book</h1>
+
+  	</div>
+
+		<div id="breadcrumbs">
+
+
+
+
+
+
+
+<ul>
+    <li><a>Men</a>
+
+        <ul>
+
+					<li><a>Hair cut</a></li>
+					<li><a>Massages</a></li>
+
+
+        </ul>
+
+	   </li>
+
+   <li><a>Women</a></li>
+   <li><a>Freelance</a></li>
+	 <li><a href="blogs.html">Blogs</a></li>
+	 <li><a href="vlogs.html">Vlogs</a></li>
+
+</ul>
+</br>
+
+
+</br>
+
+
+
+
+
+
+		</div>
+
+
+		<div id="breadcrumbs">
+		</br>
+		</br>
+		</br>
+
+			<a href="#" class="subscribe_links">Jamaluna Community</a>
+
+	  </br>
+	  </br>
+	  </br>
+
+
+
+
+		</div>
+
+
+
+		<div id="breadcrumbss">
+
+			<p class="description">
+			Download Our App
+		</p>
+		</br>
+
+		<a href="#" class="subscribe_link">Apple Store</a>
+		<a href="#" class="subscribe_link">Google Play</a>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+
+
+
+
+		</div>
+
+
+
+		<footer>
+
+			<h3>contact:</h3>
+		</footer>
