--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,6 +10,7 @@
   				<li><a href="#">Instagram</a></li>
 
          <li><a href="#">Login</a></li>
+         <li><a href="#">Sign up</a></li>
 
 
   				<li><a href="#">Help</a></li>
