--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,21 @@
 
   <body>
 
+   <% if alert %>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+       <p class="alert">
+         <%= alert %>
+       </p>
+
+
+     <% elsif notice %>
+
+     <p class="notice">
+       <%= notice %>
+     </p>
+
+
+    <% end %>
 
 
 
